final updates to the writeup

--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "fetch:plugin": "node -e '!require(\"fs\").existsSync(\"plugin/swagger-editor\") && function(){console.log(\"cloning swagger editor\"); console.log(require(\"child_process\").execSync(\"git clone git@github.com:swagger-api/swagger-editor.git plugin/swagger-editor/\").output); return true;}() || console.log(\"swagger editor exists, skipping clone\");'",
     "install:plugin": "cd plugin/swagger-editor && npm i",
     "set:swagger": "node -e 'require(\"fs\").writeFileSync(\"plugin/swagger-editor/src/plugins/local-storage/petstore.js\", `const swag = require(\"../../../../../docs/swagger.yaml\");export default swag;`);'",
-    "build:editor": "yarn set:swagger && cd plugin/swagger-editor && npm run build && yarn copy:editor",
+    "build:swagger": "cd plugin/swagger-editor && npm run build",
+    "build:editor": "yarn set:swagger && yarn build:swagger && yarn copy:editor",
     "copy:editor": "cp plugin/swagger-editor/index.html src/editor && cp -r plugin/swagger-editor/dist src/editor/dist",
     "convert:uml": "python swagger_to_uml.py",
-    "convert:uml:modified": "python swagger_to_uml.py docs/_swagger.puml docs/_swagger.png"
+    "convert:uml:modified": "python swagger_to_uml.py docs/mod-swagger.puml docs/mod-swagger.png"
   },
   "dependencies": {
     "http-server": "^0.12.1"
